WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314673
Flex container with border-box sizing provides wrong cross size to stretched flex items
https://bugs.webkit.org/show_bug.cgi?id=314673
Summary
Flex container with border-box sizing provides wrong cross size to stretched ...
alan
Reported
2026-05-12 15:03:47 PDT
ssia
Attachments
[fast-cq]Patch
(10.46 KB, patch)
2026-05-12 15:37 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2026-05-12 15:37:24 PDT
Created
attachment 479647
[details]
[fast-cq]Patch
EWS
Comment 2
2026-05-13 10:45:45 PDT
Committed
313175@main
(848ee4cc0d22): <
https://commits.webkit.org/313175@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 479647
[details]
.
Radar WebKit Bug Importer
Comment 3
2026-05-13 10:46:13 PDT
<
rdar://problem/176989934
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug