Source/WebCore/rendering/RenderFlexibleBox.h
@@ -203,7 +203,7 @@ private:
 
     bool crossAxisIsLogicalWidth() const;
     void clearFlexItemOverridingSizes();
-    LayoutUnit computeCrossSizeForFlexItemUsingContainerCrossSize(const RenderBox& flexItem) const;
+    LayoutUnit innerCrossSizeForFlexItem(const RenderBox& flexItem) const;
     void computeChildIntrinsicLogicalWidths(RenderBox&, LayoutUnit& minLogicalWidth, LayoutUnit& maxLogicalWidth) const override;
     template<typename SizeType> LayoutUnit computeMainSizeFromAspectRatioUsing(const RenderBox& flexItem, const SizeType& crossSizeLength) const;
     void NODELETE setFlowAwareLocationForFlexItem(RenderBox& flexItem, const LayoutPoint&);
